# Ilyas_ROS

./: .gitignore
src/fleet_interfaces/: package.xml
src/fleet_manager/: package.xml  setup.py
src/fleet_manager/fleet_manager/: emergency_stop.py  fleet_monitor.py  robot_simulator.py
src/fleet_manager/launch/: single_robot.launch.py
src/my_first_package/my_first_package/: setup.py  simple_subscriber.py
src/service_practice/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/service_practice/service_practice/: add_client.py  add_server.py  calculator_client.py  calculator_server.py  turtle_control_client.py  turtle_validator_server.py
src/simple_interfaces/: package.xml
src/simple_interfaces/msg/: TemperatureReading.msg
src/simple_params/: package.xml
src/simple_params/launch/: temp_sensor.launch.py
src/simple_params/simple_params/: temp_publisher.py
